crates/ide/src/handlers/snapshots/ide__handlers__signature_help__tests__after_comma.snap
---
source: crates/ide/src/handlers/signature_help.rs
expression: "check_visualized(r#\"\nclass Foo<int a, string b>;\nclass Bar: Foo<1, $>;\n\"#)"
---
Foo<int a, string b>
    -----  ^^^^^^^^
