crates/ide/src/handlers/snapshots/ide__handlers__signature_help__tests__class_value.snap
---
source: crates/ide/src/handlers/signature_help.rs
expression: "check_visualized(r#\"\nclass Foo<int a>;\ndef bar {\n  Foo x = Foo<$1>;\n}\n\"#)"
---
Foo<int a>
    ^^^^^
