crates/ide/src/handlers/snapshots/ide__handlers__signature_help__tests__class_with_doc_comment.snap
---
source: crates/ide/src/handlers/signature_help.rs
expression: "check(r#\"\n// A base class for instructions.\n// It has template arguments.\nclass Inst<int opcode, string mnemonic>;\nclass Add: Inst<$1, \"add\">;\n\"#)"
---
Inst<int opcode, string mnemonic>
     ^^^^^^^^^^  ---------------
------
A base class for instructions.
It has template arguments.
