crates/ide/src/handlers/snapshots/ide__handlers__signature_help__tests__no_template_args.snap
---
source: crates/ide/src/handlers/signature_help.rs
expression: "check(r#\"\nclass Foo;\nclass Bar: Foo<$>;\n\"#)"
---

